--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.0
 jobs:
   build:
     docker:
-      - image: circleci/node:latests
+      - image: circleci/node:latest
     steps:
       - checkout
       - add_ssh_keys:
@@ -10,6 +10,8 @@ jobs:
             - "b7:ca:d6:59:7d:9f:ba:b9:44:23:03:8a:d1:38:47:53"
       - run: 
           command: |
+            git config --global user.email "istaka12@gmail.com"
+            git config --global user.name "ganezasam"
             git commit --allow-empty -m '[ci skip] test'
             git push origin master
       
